--- a/back/back_end_festival/src/main/resources/templates/board_html/modify_page.html
+++ b/back/back_end_festival/src/main/resources/templates/board_html/modify_page.html
@@ -1,17 +1,42 @@
-<html>
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>글 수정 페이지</title>
 </head>
 <body>
 <!-- 글 수정할 때 나오는 페이지의 html 입니다. -->
+<!-- form 데이터가 /board/update 로 전달됩니다. -->
+
+<!-- content -->
+<form class="container" action="/board/update" method="post">
+    <input type="hidden" name="id" th:value="${boardEntity.id}">
+    <div class="mb-3">
+        <label class="form-label">제목</label>
+        <input type="text" class="form-control" name="title" placeholder="제목" th:value="${boardEntity.title}">
+    </div>
+    <div class="mb-3">
+        <label class="form-label">내용</label>
+        <textarea class="form-control" rows="13" name="content" placeholder="내용">[[${boardEntity.content}]]</textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">수정 완료</button>
+    <a th:href="@{'/board/' + ${boardEntity.id}}" class="btn btn-primary">뒤로</a>
+</form>
+
 <!-- content -->
 
+<hr color="black">
+<h1>강원대학교 축제 홈페이지 만들어봅시다.</h1>
 
-<!-- content -->
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
