--- a/back/back_end_festival/src/main/resources/templates/board_html/single_page.html
+++ b/back/back_end_festival/src/main/resources/templates/board_html/single_page.html
@@ -1,14 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>상세 페이지</title>
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a href="/" class="btn btn-primary">메인페이지로 이동</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-<!-- 하나의 글을 눌렀을 때 상세 페이지를 보여주는 html 입니다. -->
+    </div>
+</nav>
+<!--  설명: 게시글을 작성했을 때, 해당 글만 보여주는 페이지입니다. -->
+<!--  content -->
+
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">글 번호</th>
+        <th scope="col">글 내용</th>
+        <th scope="col">글쓴이</th>
+        <th scope="col">작성 일시</th>
+    </tr>
+    </thead>
+    <tbody>
+       <tr>
+           <td th:text="${boardEntity.id}"></td>
+           <td th:text="${boardEntity.title}"></td>
+           <td th:text="${boardEntity.content}"></td>
+           <td th:text="${boardEntity.curTime}"></td>
+       </tr>
+
+    </tbody>
+</table>
+
+
+<a th:href="@{/board/entire_page}" class="btn btn-primary">전체 게시판으로 이동</a>
+<a th:href="@{'/board/' + ${boardEntity.id} + '/modify'}" class="btn btn-primary">글 수정</a>
+<a th:href="@{'/board/' + ${boardEntity.id} + '/delete'}" class="btn btn-danger">글 삭제</a>
+
 <!-- content -->
-<!-- content -->
+
+<hr color="black">
+<h1>강원대학교 축제 홈페이지 만들어봅시다.</h1>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
