조회수 기능 구현

--- a/back/back_end_festival/src/main/resources/templates/board_html/entire_page.html
+++ b/back/back_end_festival/src/main/resources/templates/board_html/entire_page.html
@@ -25,19 +25,24 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid">
-        <a href="/" class="btn btn-primary">메인페이지로 이동</a>
+        <a class="navbar-brand" href="/">메인 페이지로</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">로그인</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
-
 <hr color="green">
-<h1>축제 홈페이지에 오신 것을 환영합니다.</h1>
+<h1>게시판에 오신 것을 환영합니다.</h1>
 <hr color="green">
 
 <!--  게시판의 전체 목록을 보여주는 html 입니다.-->
@@ -50,6 +55,7 @@
         <th scope="col">제목</th>
         <th scope="col">글쓴이</th>
         <th scope="col">작성 일시</th>
+        <th scope="col">조회 수</th>
     </tr>
     </thead>
     <tbody>
@@ -58,6 +64,7 @@
         <td th:text="${board.title}">제목</td>
         <td><a th:href="@{/board/{id}(id = ${board.id})}" th:text="${board.content}"></a></td>
         <td th:text="${board.curTime}">작성 일시</td>
+        <td th:text="${board.see}">조회 수</td>
     </tr>
     </tbody>
 </table>
