--- a/back/back_end_festival/src/main/resources/templates/board_html/modify_page.html
+++ b/back/back_end_festival/src/main/resources/templates/board_html/modify_page.html
@@ -10,8 +10,38 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>글 수정 페이지</title>
+    <style>
+        body {
+            width: 800px;
+            margin: 0 auto;
+            margin-top: 50px;
+        }
+
+        .container {
+            height: 500px;
+        }
+
+    </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">메인 페이지로</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">로그인</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
 <!-- 글 수정할 때 나오는 페이지의 html 입니다. -->
 <!-- form 데이터가 /board/update 로 전달됩니다. -->
 
