--- a/back/back_end_festival/src/main/resources/templates/main_page.html
+++ b/back/back_end_festival/src/main/resources/templates/main_page.html
@@ -25,14 +25,23 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid">
-        <a href="/board/entire_page" class="btn btn-primary">게시판으로 이동</a>
+        <a class="navbar-brand" href="/">Main</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">로그인</a>
+                </li>
+                <li>
+                    <a href="/board/entire_page" class="nav-link btn btn-primary">게시판으로 이동</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 
