--- a/front/styles/style.scss
+++ b/front/styles/style.scss
@@ -1,3 +1,33 @@
+@font-face {
+    font-family: "festivalfont-00";
+    src: url("../src/fonts/HGGGOTHICSSI_00G.TTF");
+}
+
+@font-face {
+    font-family: "festivalfont-20";
+    src: url("../src/fonts/HGGGOTHICSSI_20G.TTF");
+}
+
+@font-face {
+    font-family: "festivalfont-40";
+    src: url("../src/fonts/HGGGOTHICSSI_40G.TTF");
+}
+
+@font-face {
+    font-family: "festivalfont-60";
+    src: url("../src/fonts/HGGGOTHICSSI_60G.TTF");
+}
+
+@font-face {
+    font-family: "festivalfont-80";
+    src: url("../src/fonts/HGGGOTHICSSI_80G.TTF");
+}
+
+@font-face {
+    font-family: "festivalfont-99";
+    src: url("../src/fonts/HGGGOTHICSSI_99G.TTF");
+}
+
 a {
     color: inherit;
     font-style: inherit;
@@ -6,9 +36,16 @@ a {
 
 body {
     background-color: #12183F;
+    font-family: festivalfont-60;
+    -webkit-font-smoothing: antialiased;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
